--- a/index.html
+++ b/index.html
@@ -15,29 +15,32 @@
     <h1>Weather Dashboard</h1>
   </header>
 
-  <!-- max-width for ultra wide resolutions -->
-  <div class="container-fluid" style="max-width: 1400px">
-    <div class="row">
-      <aside class="col-lg-3 pb-3">
-        <h2 id="form-heading" class="mt-1 h3 form-label">
-          Search for a City:
-        </h2>
-        <form id="search-form" class="form">
-          <div class="form-inline form-group">
-            <div class="input-group">
-              <input class="form-input weather-search" type="text" id="search-input" placeholder="London"
-                aria-labelledby="form-heading" aria-controls="today forecast" />
-              <div class="input-group-append">
-                <button type="submit" class="btn search-button" id="search-button" aria-label="submit search">
-                  Search
-                </button>
-                <hr class="hr weather-hr" />
-              </div>
+   <!-- max-width for ultra wide resolutions -->
+<div class="container-fluid" style="max-width: 1400px">
+  <div class="row">
+    <aside class="col-lg-3 pb-3">
+      <h2 id="form-heading" class="mt-2 h3 form-label">
+        Search for a City:
+      </h2>
+      <form id="search-form" class="form">
+        <!-- <div class="form-inline form-group"> -->
+        <div class="form-group">
+          <div class="">
+            <input class="form-control mb-3" type="text" id="search-input" placeholder="London"
+            aria-labelledby="form-heading" aria-controls="today forecast" />
+            <!-- <div class="input-group-append"> -->
+            <div class="">
+              <button type="submit" class="btn btn-primary search-button col-12" id="search-button" aria-label="submit search">
+                Search
+              </button>
+              <button type="button" class="btn btn-warning mt-3 col-12" id="clearBtn">Clear History</button>
+              <hr class="hr weather-hr" />
             </div>
           </div>
-        </form>
-        <div class="list-group" id="history"></div>
-      </aside>
+        </div>
+      </form>
+      <div class="list-group" id="history"></div>
+    </aside>
 
       <div class="col-lg-9 pb-3">
         <section id="today" class="mt-3" role="region" aria-live="polite"></section>
