--- a/index.html
+++ b/index.html
@@ -1,59 +1,116 @@
 <!DOCTYPE html>
 <html lang="en-gb">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+      integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"
+      crossorigin="anonymous"
+    />
+    <link
+      href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./assets/css/style.css"/>
+    <title>Weather Dashboard</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" /> 
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" /> 
-  <title>Weather Dashboard</title>
-</head>
-
-<body>
-  <header class="container-fluid text-center text-white bg-dark p-2 weather-header">
-    <h1>Weather Dashboard</h1>
-  </header>
-
-   <!-- max-width for ultra wide resolutions -->
-<div class="container-fluid" style="max-width: 1400px">
-  <div class="row">
-    <aside class="col-lg-3 pb-3">
-      <h2 id="form-heading" class="mt-2 h3 form-label">
-        Search for a City:
-      </h2>
-      <form id="search-form" class="form">
-        <!-- <div class="form-inline form-group"> -->
-        <div class="form-group">
-          <div class="">
-            <input class="form-control mb-3" type="text" id="search-input" placeholder="London"
-            aria-labelledby="form-heading" aria-controls="today forecast" />
-            <!-- <div class="input-group-append"> -->
-            <div class="">
-              <button type="submit" class="btn btn-primary search-button col-12" id="search-button" aria-label="submit search">
-                Search
-              </button>
-              <button type="button" class="btn btn-warning mt-3 col-12" id="clearBtn">Clear History</button>
-              <hr class="hr weather-hr" />
+  <body>
+    <header
+      class="container-fluid text-center text-white bg-dark p-2 weather-header"
+    >
+      <h1>Weather Dashboard</h1>
+    </header>
+    
+    <!-- max-width for ultra wide resolutions -->
+    <div class="container-fluid" style="max-width: 1400px">
+      <div class="row">
+        <aside class="col-lg-3 pb-3">
+          <h2 id="form-heading" class="mt-2 h3 form-label">
+            Search for a City:
+          </h2>
+          <form id="search-form" class="form">
+            <!-- <div class="form-inline form-group"> -->
+            <div class="form-group">
+              <div class="">
+                <input
+                  class="form-control mb-3"
+                  type="text"
+                  id="search-input"
+                  placeholder="London"
+                  aria-labelledby="form-heading"
+                  aria-controls="today forecast"
+                />
+                <!-- <div class="input-group-append"> -->
+                <div class="">
+                  <button
+                    type="submit"
+                    class="btn btn-primary search-button col-12"
+                    id="search-button"
+                    aria-label="submit search"
+                  >
+                    Search
+                  </button>
+                  <button
+                    type="button"
+                    class="btn btn-warning mt-3 col-12"
+                    id="clearBtn"
+                  >
+                    Clear History
+                  </button>
+                  <hr class="hr weather-hr" />
+                </div>
+              </div>
             </div>
-          </div>
-        </div>
-      </form>
-      <div class="list-group" id="history"></div>
-    </aside>
+          </form>
+          <div class="list-group" id="history"></div>
+        </aside>
 
-      <div class="col-lg-9 pb-3">
-        <section id="today" class="mt-3" role="region" aria-live="polite"></section>
-        <section id="forecast" class="row mt-3" role="region" aria-live="polite"></section>
+        <div class="col-lg-9 pb-3">
+          <section
+            id="today"
+            class="mt-3"
+            role="region"
+            aria-live="polite"
+          ></section>
+          <section
+            id="forecast"
+            class="row mt-3"
+            role="region"
+            aria-live="polite"
+          ></section>
+        </div>
       </div>
     </div>
-  </div>
 
-   <!-- Moment.js -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.4/moment.min.js"></script>
-  <!-- jQuery -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <script src="./assets/js/script.js"></script>
-</body>
+    <footer class="footer">
+      <p>
+        Copyright ©
+        <script>
+          document.write(new Date().getFullYear());
+        </script>
+        Ibrahim Mohamed
+        <a href="https://github.com/Ibrahim-Mohamed45" target="_blank">
+          <i class="fab fa-github" style="color: black"></i>
+        </a>
+      </p>
+    </footer>
 
+    <!-- Moment.js -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.4/moment.min.js"></script>
+    <!-- jQuery -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="./assets/js/script.js"></script>
+  </body>
 </html>
